--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,11 @@
-pipeline {
+ pipeline {
     agent any
+
+    parameters {
+        string(name: 'BRANCH', defaultValue: 'master', description: 'Git branch to build from')
+        string(name: 'PORT', defaultValue: '5000', description: 'Port to expose the app on')
+        string(name: 'CONTAINER_NAME', defaultValue: 'realimage', description: 'Docker container name')
+    }
 
     environment {
         DOCKER_IMAGE = "siddhartha200340/real-image:latest"
@@ -8,23 +14,23 @@ pipeline {
     stages {
         stage('Checkout Code') {
             steps {
-                git branch: 'master',
+                git branch: "${params.BRANCH}",
                     url: 'https://github.com/siddha200340/my-real-life-project.git'
             }
         }
 
         stage('Build Docker Image') {
             steps {
-                bat 'docker build -t %DOCKER_IMAGE% .'
+                bat "docker build -t %DOCKER_IMAGE% ."
             }
         }
 
         stage('Deploy Container') {
             steps {
-                bat '''
-                docker rm -f realimage || exit 0
-                docker run -d -p 5000:5000 --name realimage %DOCKER_IMAGE%
-                '''
+                bat """
+                docker rm -f ${params.CONTAINER_NAME} || exit 0
+                docker run -d -p ${params.PORT}:5000 --name ${params.CONTAINER_NAME} %DOCKER_IMAGE%
+                """
             }
         }
     }
